[tool.poetry]
name = "testtaskoraclestat"
version = "0.1.0"
description = ""
authors = ["Sem, <semseveryanin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --tb=short --cov-config=pyproject.toml"

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
